# nostop_learning

./: CMakeLists.txt  CMakeLists_old.txt  nostop_learning.kdev4  package.xml
.kdev4/: nostop_learning.kdev4
include/nostop_learning/: CoarseCorrelatedAlgorithm.h  DISLAlgorithm.h  LearningWorld.h  PIPIPAlgorithm.h  ParetoEfficientAlgorithm.h  agent.h  area.h  batalinAlgorithm.h  batalinArea.h  batalinGuard.h  circle.h  coverageAlgorithm.h  coverageAlgorithm_old.h  coverageUtility.h  discretizedArea.h  guard.h  learningAlgorithm.h  learningWorld.h  line2D.h  monitor.h  neutral.h  polygon.h  probability.h  shape2D.h  sink.h  structuredArea.h  thief.h  unStructuredArea.h  world.h
src/: CoarseCorrelatedAlgorithm.cpp  DISLAlgorithm.cpp  LearningWorld.cpp  PIPIPAlgorithm.cpp  ParetoEfficientAlgorithm.cpp  agent.cpp  agentTrajectory.cpp  area.cpp  circle.cpp  coverageAlgorithm.cpp  discretizedArea.cpp  guard.cpp  learningAlgorithm.cpp  learningWorld.cpp  line2D.cpp  polygon.cpp  probability.cpp  shape2D.cpp  structuredArea.cpp  unStructuredArea.cpp  world.cpp
