<?xml version="1.0"?>
<package>
  <name>nostop_learning</name>
  <version>0.0.0</version>
  <description>The nostop_learning package</description>

  <maintainer email="nardi@mail.dm.unipi.it">SimoneNardi</maintainer>

  <license>GPLv2</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>BaseMath</build_depend>
  <build_depend>roscpp</build_depend>
  
  <run_depend>BaseMath</run_depend>
  <run_depend>roscpp</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>